package protoFile;
message getVersionResponse{
     required string version = 1;
}